Handle dynamic icons based on theme

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 <footer>
     <div style="display: flex; justify-content: center;">
         <a href="https://github.com/emlautarom1/">
-            <img src="{{ "/images/github-dark.png" }}" alt="GitHub" width="32" height="32">
+            <img class="icon-light" src="{{ "/images/github-dark.png" }}" alt="GitHub" width="32" height="32">
+            <img class="icon-dark" src="{{ "/images/github-light.png" }}" alt="GitHub" width="32" height="32">
         </a>
     </div>
     <span>
